--- a/.github/workflows/master_lijster-api.yml
+++ b/.github/workflows/master_lijster-api.yml
@@ -24,8 +24,8 @@ jobs:
     - name: yarn install, build, and test
       run: |
         yarn install
-        yarn run build --if-present
-        yarn run test --if-present
+        yarn run build
+        yarn run test
 
     - name: 'Deploy to Azure Web App'
       uses: azure/webapps-deploy@v2
