--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "yarn run clean && yarn run build-babel",
     "build-babel": "babel -d ./build ./src -s",
-    "clean": "rm -rf .nyc_output build coverage && mkdir -m 777 build",
+    "clean": "rm -rf .nyc_output build coverage node_modules && yarn cache clean && yarn install && mkdir -m 777 build",
     "dev": "cross-env DEBUG=dev nodemon --exec babel-node ./src/server.js",
     "start": "node ./build/server.js",
     "test": "echo \"Error: no test specified\" && exit 0"
